--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 flake8 = "*"
 black = "*"
 pytest = "*"
+mypy = "*"
 
 [packages]
 fastapi = "*"
@@ -15,9 +16,10 @@ uvicorn = "*"
 pyjwt = "*"
 passlib = {extras = ["bcrypt"],version = "*"}
 pony = "*"
+email-validator = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.6"
 
 [pipenv]
 allow_prereleases = true
