--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-flake8 = "*"
 black = "*"
 pytest = "*"
 mypy = "*"
 pytest-cov = "*"
 mixer = "*"
+flake8 = "*"
+mccabe = "*"
 
 [packages]
 fastapi = "*"
