--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,10 +9,7 @@
             "command": "${config:python.pythonPath}",
             "args": [
                 "-m",
-                "flake8",
-                "--max-line-length=88",
-                "--ignore=E203",
-                "--max-complexity=10"
+                "flake8"
             ],
             "presentation": {
                 "reveal": "never",
