--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ mccabe = "*"
 requests = "*"
 
 [packages]
-fastapi = "*"
+fastapi = "==0.44.0"
 python-multipart = "*"
 uvicorn = "*"
 pyjwt = "*"
