--- a/Pipfile
+++ b/Pipfile
@@ -14,21 +14,19 @@ requests = "*"
 pytest-xdist = "*"
 
 [packages]
+passlib = {extras = [ "bcrypt",],version = "*"}
 fastapi = "==0.52.0"
+pylast = "*"
 pydantic = "==1.2"
 python-multipart = "*"
 uvicorn = "*"
 pyjwt = "*"
 pony = "*"
 email-validator = "*"
-uvloop = "*"
+uvloop = {version = "*", sys_platform = "== 'linux'"}
 
 [requires]
 python_version = "3.8"
 
 [pipenv]
 allow_prereleases = true
-
-[packages.passlib]
-extras = [ "bcrypt",]
-version = "*"
