--- a/.drone.yml
+++ b/.drone.yml
@@ -5,5 +5,6 @@ steps:
   - name: test
     image: python
     commands:
+      - pip install pipenv
       - pipenv install --system --deploy --ignore-pipfile
       - pytest
