--- a/.drone.yml
+++ b/.drone.yml
@@ -11,3 +11,4 @@ steps:
       - pip install pipenv
       - pipenv install --system --deploy --dev --ignore-pipfile
       - pytest
+      - echo hallo
