--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,30 @@
 kind: pipeline
 type: docker
-name: default
+name: test
 
 steps:
   - name: test
-    image: python
+    image: python:3.8
     commands:
       - pip install pipenv
       - pipenv install --system --deploy --dev --ignore-pipfile
       - pytest
+
+---
+kind: pipeline
+type: docker
+name: registry
+
+steps:
+  - name: docker
+    image: plugins/docker
+    settings:
+      username:
+        from_secret: DOCKER_ID
+      password:
+        from_secret: DOCKER_PASSWORD
+      repo: mrrikkert/pymusic
+      tags: latest
+
+depends_on:
+  - test
