--- a/.drone.yml
+++ b/.drone.yml
@@ -13,10 +13,10 @@ steps:
 ---
 kind: pipeline
 type: docker
-name: registry
+name: publish
 
 steps:
-  - name: docker
+  - name: docker registry
     image: plugins/docker
     settings:
       username:
@@ -25,6 +25,11 @@ steps:
         from_secret: DOCKER_PASSWORD
       repo: mrrikkert/pymusic
       tags: latest
+      when:
+        branch: master
+        event: push
+    commands:
+      -
 
 depends_on:
   - test
