--- a/.drone.yml
+++ b/.drone.yml
@@ -25,17 +25,16 @@ steps:
         from_secret: DOCKER_PASSWORD
       repo: mrrikkert/pymusic
       tags: latest
-      when:
-        branch: master
-        event: push
   - name: rancher
     image: peloton/drone-rancher
-    url: https://rancher.kn01.fhict.nl/v3
-    access_key: ${RANCHER_ACCESS_KEY}
-    secret_key: ${RANCHER_SECRET_KEY}
-    docker_image: mrrikkert/pymusic
-    service: mrrikkert/pymusic
-    confirm: true
+    settings:
+      - url: https://rancher.kn01.fhict.nl/v3
+      - access_key: ${RANCHER_ACCESS_KEY}
+      - secret_key: ${RANCHER_SECRET_KEY}
+      - docker_image: mrrikkert/pymusic
+      - service: mrrikkert/pymusic
+      - confirm: true
 
+branch: master
 depends_on:
   - test
