--- a/.drone.yml
+++ b/.drone.yml
@@ -34,6 +34,7 @@ steps:
         from_secret: HEROKU_EMAIL
       password:
         from_secret: HEROKU_PASSWORD
+      insecure: true
 
 trigger:
   branch:
