--- a/.drone.yml
+++ b/.drone.yml
@@ -16,17 +16,17 @@ steps:
 
   - name: test full
     image: python:3.8
-    commands:
-      - pip install pipenv
-      - pipenv install --system --deploy --dev --ignore-pipfile
-      - export LASTFM_KEY=${LASTFM_KEY}
-      - export LASTFM_SECRET=${LASTFM_SECRET}
-      - pytest --run-optional-tests=lastfm
     environment:
       LASTFM_KEY:
         from_secret: LASTFM_KEY
       LASTFM_SECRET:
         from_secret: LASTFM_SECRET
+    commands:
+      - pip install pipenv
+      - pipenv install --system --deploy --dev --ignore-pipfile
+      - export LASTFM_KEY=$LASTFM_KEY
+      - export LASTFM_SECRET=$LASTFM_SECRET
+      - pytest --run-optional-tests=lastfm
     when:
       branch:
         - master
