--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ pony = "*"
 email-validator = "*"
 python-dotenv = "*"
 uvloop = {version = "*",sys_platform = "== 'linux'"}
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
