--- a/Pipfile
+++ b/Pipfile
@@ -16,10 +16,11 @@ pytest-optional-tests = "*"
 pytest-dotenv = "*"
 
 [packages]
-passlib = {extras = [ "bcrypt",],version = "*"}
-fastapi = "==0.52.0"
+bcrypt = "==3.2.0"
+passlib = "*"
+fastapi = "==0.61.0"
 pylast = "*"
-pydantic = "==1.2"
+pydantic = "==1.6.1"
 python-multipart = "*"
 uvicorn = "*"
 pyjwt = "*"
