only install pypiwin32 on windows

--- a/Pipfile
+++ b/Pipfile
@@ -29,7 +29,7 @@ email-validator = "*"
 python-dotenv = "*"
 uvloop = {version = "*",sys_platform = "== 'linux'"}
 psycopg2 = "*"
-pypiwin32 = "*"
+pypiwin32 = {version = "*", sys_platform = "== 'win32'"}
 
 [requires]
 python_version = "3.8"
