excluded pywin32 from linux install

--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,7 @@ python-dotenv = "*"
 uvloop = {version = "*", sys_platform = "== 'linux'"}
 psycopg2 = "*"
 pypiwin32 = {version = "*", sys_platform = "== 'win32'"}
+pywin32 = {version = "*", sys_platform = "== 'win32'"}
 
 [requires]
 python_version = "3.8"
