--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,8 @@ psycopg2 = "*"
 pypiwin32 = {version = "*",sys_platform = "== 'win32'"}
 pywin32 = {version = "*",sys_platform = "== 'win32'"}
 click = "*"
+pytz = "*"
+tzlocal = "*"
 
 [requires]
 python_version = "3.8"
