--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ pypiwin32 = {version = "*",sys_platform = "== 'win32'"}
 pywin32 = {version = "*",sys_platform = "== 'win32'"}
 click = "*"
 pytz = "*"
+pykakasi = "*"
 
 [requires]
 python_version = "3.8"
