--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 black = "==18.9b0"
 pytest = "*"
 pytest-cov = "*"
-mixer = "*"
+mixer = "==7.0.6"
 flake8 = "*"
 mccabe = "*"
 requests = "*"
@@ -28,6 +28,7 @@ pywin32 = {version = "*",sys_platform = "== 'win32'"}
 click = "*"
 pytz = "*"
 pykakasi = "*"
+mixer = "==7.0.6"
 
 [requires]
 python_version = "3.8"
