--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,7 @@ wcwidth = "*"
 
 [packages]
 pylast = "*"
-pydantic = "==1.6.1"
+pydantic = "*"
 python-multipart = "*"
 pony = "*"
 python-dotenv = "*"
