disable warnings on pytest

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ max-complexity=10
 
 [pytest]
 junit_family=xunit2
-addopts = -n 4
+addopts = -n 4 -p no:warnings
 optional_tests=
     lastfm: connect to lastfm
     mb: musicbee tests
