--- a/Pipfile
+++ b/Pipfile
@@ -31,6 +31,9 @@ pykakasi = "*"
 mixer = "==7.0.6"
 loguru = "*"
 better-exceptions = "*"
+pandas = "*"
+dash = "*"
+dash-bootstrap-components = "*"
 
 [requires]
 python_version = "3.9"
