--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,34 +2,5 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Flake8",
-            "type": "process",
-            "command": "${config:python.pythonPath}",
-            "args": [
-                "-m",
-                "flake8"
-            ],
-            "presentation": {
-                "reveal": "never",
-                "panel": "dedicated"
-            },
-            "problemMatcher": {
-                "owner": "flake8",
-                "fileLocation": [
-                    "relative",
-                    "${workspaceFolder}"
-                ],
-                "pattern": {
-                    "regexp": "(.+?):(\\d+):(\\d+): (.+?) (.*)",
-                    "file": 1,
-                    "line": 2,
-                    "column": 3,
-                    "severity": 4,
-                    "message": 5
-                }
-            }
-        }
-    ]
+    "tasks": []
 }
