updated env template

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 # These varialbes can be stored in the repository
 # keys used here are fake and only for development
 DB_PROVIDER="sqlite"
+
 DB_SQLITE_FILENAME="sqlite.db"
 DB_SQLITE_CREATE_DB=True
 
@@ -9,6 +10,9 @@ DB_POSTGRES_PASSWORD=
 DB_POSTGRES_HOST=
 DB_POSTGRES_DATABASE=
 DB_POSTGRES_PORT=
+
+ALBUM_ART_PATH=C:\art
+IMG_URL=https://myhost:5555/img/
 
 # These keys should not be in the repository!!!
 LASTFM_KEY=""
