added jupyter for graph prototyping

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pytest-xdist = "*"
 pytest-optional-tests = "*"
 pytest-dotenv = "*"
 wcwidth = "*"
+jupyter = "*"
 
 [packages]
 pylast = "==4.2.1"
