removed multiple workers from pytest

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,8 @@ max-complexity=10
 
 [pytest]
 junit_family=xunit2
-addopts = -n 4 -p no:warnings
+addopts = -p no:warnings
+# addopts = -n 4 -p no:warnings
 optional_tests=
     lastfm: connect to lastfm
     mb: musicbee tests
