--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,7 @@ DB_POSTGRES_PORT=
 
 ALBUM_ART_PATH=C:\art
 IMG_URL=https://myhost:5555/img/
+MUSIC_PATH=C:\music\
 
 # These keys should not be in the repository!!!
 LASTFM_KEY=""
