--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,10 @@
 [flake8]
-ignore=E203
+ignore=
+    E203 # Whitespace before ':'
+    W503 # line break before binary operator
 max-line-length=88
 max-complexity=10
+exclude=cli/musicbeeipc
 
 [pytest]
 junit_family=xunit2
