--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ ignore=
     W503 # line break before binary operator
 max-line-length=88
 max-complexity=10
-exclude=cli/musicbeeipc
+exclude=cli/musicbeeipc/*
 
 [pytest]
 junit_family=xunit2
