fixed all linting errors

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,5 +2,21 @@
     // See https://go.microsoft.com/fwlink/?LinkId=733558
     // for the documentation about the tasks.json format
     "version": "2.0.0",
-    "tasks": []
+    "tasks": [
+        {
+            "type": "shell",
+            "label": "lint python files",
+            "command": "C:/Users/mrrik/.virtualenvs/PyMusic-FLHxMIje/Scripts/flake8",
+            "problemMatcher": {
+                "pattern": {
+                    "regexp": "^(.*):(\\d*):(\\d*): (.\\d*) (.*)$",
+                    "file": 1,
+                    "line": 2,
+                    "column": 3,
+                    "code": 4,
+                    "message": 5
+                }
+            }
+        }
+    ]
 }
