--- a/Pipfile
+++ b/Pipfile
@@ -38,6 +38,7 @@ dash = "*"
 dash-bootstrap-components = "*"
 python-dateutil = "*"
 psycopg2-binary = "*"
+gunicorn = {version = "*",sys_platform = "== 'linux'"}
 
 [requires]
 python_version = "3.9"
