lock dash to older version

--- a/Pipfile
+++ b/Pipfile
@@ -34,8 +34,8 @@ mixer = "==7.0.6"
 loguru = "*"
 better-exceptions = "*"
 pandas = "*"
-dash = "*"
-dash-bootstrap-components = "*"
+dash = "<2.0.0"
+dash-bootstrap-components = "<1"
 python-dateutil = "*"
 psycopg2-binary = "*"
 gunicorn = {version = "*",sys_platform = "== 'linux'"}
