--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,7 @@ autoflake = "*"
 pylast = "==4.2.1"
 pydantic = "*"
 python-multipart = "*"
-pony = "*"
+pony = "==0.7.14"
 python-dotenv = "*"
 pypiwin32 = {version = "*",sys_platform = "== 'win32'"}
 pywin32 = {version = "*",sys_platform = "== 'win32'"}
@@ -33,7 +33,7 @@ pykakasi = "*"
 mixer = "==7.0.6"
 loguru = "*"
 better-exceptions = "*"
-pandas = "*"
+pandas = "==1.3.3"
 dash = ">=2.0.0"
 dash-bootstrap-components = "*"
 python-dateutil = "*"
