--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
   - name: test commit
     image: python:3.8
     commands:
-      - pip install -r requirements.txt
+      - pip install -r requirements.dev.txt
       - pytest
       - flake8
       - autoflake -r --remove-all-unused-imports --remove-unused-variables .
@@ -27,7 +27,7 @@ steps:
       LASTFM_SECRET:
         from_secret: LASTFM_SECRET
     commands:
-      - pip install -r requirements.txt
+      - pip install -r requirements.dev.txt
       # Zet de benodigde env variabelen in de sessie
       # deze worden opgepakt door de applicatie
       - export LASTFM_KEY=$LASTFM_KEY
