--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,7 @@ DB_POSTGRES_PORT=
 ALBUM_ART_PATH="C:\\art"
 IMG_URL="https://myhost:5555/img/"
 MUSIC_PATH="C:\\music\\"
+LIBRARY_BASE_PATH="C:\\music\\"
 
 # These keys should not be in the repository!!!
 LASTFM_KEY=""
@@ -23,3 +24,4 @@ LASTFM_SECRET=""
 DOCKER_ALBUM_ART_PATH="C:\\art"
 DOCKER_IMG_URL="https://myhost:5555/img/"
 DOCKER_MUSIC_PATH="C:\\music\\"
+DOCKER_LIBRARY_BASE_PATH="/app/music/"
