--- a/.drone.yml
+++ b/.drone.yml
@@ -50,3 +50,28 @@ trigger:
   event:
     - push
     - pull_request
+
+---
+kind: pipeline
+type: docker
+name: publish
+
+steps:
+  - name: docker registry
+    image: plugins/docker
+    settings:
+      # Deze secrets staan gedefinieerd in de drone server
+      username:
+        from_secret: DOCKER_ID
+      password:
+        from_secret: DOCKER_PASSWORD
+      repo: mrrikkert/pymusic
+      tags: latest
+
+trigger:
+  branch:
+    - master
+  event:
+    - push
+depends_on:
+  - test
