make workers and threads configurable during runtime

--- a/.env.template
+++ b/.env.template
@@ -25,3 +25,5 @@ DOCKER_ALBUM_ART_PATH="C:\\art"
 DOCKER_IMG_URL="https://myhost:5555/img/"
 DOCKER_MUSIC_PATH="C:\\music\\"
 DOCKER_LIBRARY_BASE_PATH="/app/music/"
+GUNICORN_WORKERS=1
+GUNICORN_THREADS=1
