--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -16,7 +16,7 @@ cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.7" and pyth
 charset-normalizer==2.0.12; python_full_version >= "3.6.0" and python_version >= "3"
 click==8.0.4; python_version >= "3.6"
 colorama==0.4.4; platform_system == "Windows" and python_version >= "3.6" and python_full_version >= "3.6.2" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6") and python_full_version >= "3.5.0") and (python_version >= "3.8" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.8" and python_full_version >= "3.5.0")
-coverage==6.3.2; python_version >= "3.7"
+coverage==6.5.0; python_version >= "3.7"
 dash-alternative-viz @ git+https://github.com/plotly/dash-alternative-viz.git@master
 dash-bootstrap-components==1.0.3; python_version >= "3.6" and python_version < "4"
 dash-bootstrap-templates==1.0.5
@@ -73,6 +73,7 @@ parso==0.8.3; python_version >= "3.8"
 pathspec==0.9.0; python_full_version >= "3.6.2"
 pexpect==4.8.0; sys_platform != "win32" and python_version >= "3.8"
 pickleshare==0.7.5; python_version >= "3.8"
+pillow==9.3.0; python_version >= "3.7"
 platformdirs==2.5.1; python_version >= "3.7" and python_full_version >= "3.6.2"
 plotly==5.6.0; python_version >= "3.6" and python_version < "4"
 pluggy==1.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
@@ -115,7 +116,7 @@ stack-data==0.2.0; python_version >= "3.8"
 tenacity==8.0.1; python_version >= "3.6"
 terminado==0.13.1; python_version >= "3.7"
 testpath==0.6.0; python_version >= "3.7"
-tomli==2.0.1; python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7")
+tomli==2.0.1; python_version >= "3.7" and python_full_version >= "3.6.2" and python_full_version <= "3.11.0a6" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7")
 toolz==0.11.2; python_version >= "3.7"
 tornado==6.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 traitlets==5.1.1; python_full_version >= "3.7.0" and python_version >= "3.8"
