--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -17,7 +17,7 @@ charset-normalizer==2.1.1 ; python_version >= "3.9" and python_version < "4"
 click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows" or python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
 coverage[toml]==6.5.0 ; python_version >= "3.9" and python_version < "4.0"
-dash-alternative-viz @ git+https://github.com/plotly/dash-alternative-viz.git@HEAD ; python_version >= "3.9" and python_version < "4.0"
+dash-alternative-viz @ git+https://github.com/plotly/dash-alternative-viz.git@master ; python_version >= "3.9" and python_version < "4.0"
 dash-bootstrap-components==1.2.1 ; python_version >= "3.9" and python_version < "4"
 dash-bootstrap-templates==1.0.7 ; python_version >= "3.9" and python_version < "4.0"
 dash-core-components==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
