--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ better-exceptions==0.3.3 ; python_version >= "3.9" and python_version < "4.0"
 certifi==2022.9.24 ; python_version >= "3.9" and python_version < "4.0"
 click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows" or python_version >= "3.9" and python_version < "4.0" and sys_platform == "win32"
-dash-alternative-viz @ git+https://github.com/plotly/dash-alternative-viz.git@HEAD ; python_version >= "3.9" and python_version < "4.0"
+dash-alternative-viz @ git+https://github.com/plotly/dash-alternative-viz.git@master ; python_version >= "3.9" and python_version < "4.0"
 dash-bootstrap-components==1.2.1 ; python_version >= "3.9" and python_version < "4"
 dash-bootstrap-templates==1.0.7 ; python_version >= "3.9" and python_version < "4.0"
 dash-core-components==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
