--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,7 +30,9 @@ jobs:
         $POETRY_HOME/bin/poetry --version
     - name: Install dependencies
       run: |
-        poetry install --with dev
+        export POETRY_HOME=/opt/poetry
+        $POETRY_HOME/bin/poetry config virtualenvs.create false
+        $POETRY_HOME/bin/poetry install --with dev
     - name: Lint
       run: |
         flake8
