--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,6 +12,10 @@ on:
 permissions:
   contents: read
 
+env:
+  LIBRARY_BASE_PATH: "Y:\\Music"
+  MUSIC_PATH: Y:\\Music
+
 jobs:
   build:
     runs-on: ubuntu-latest
