--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -52,3 +52,24 @@ jobs:
       if: github.ref == 'refs/heads/master'
       run: |
         pytest -m lastfm
+  docker:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master' && github.event == 'push'
+    needs: "build"
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags:
+            mrrikkert/pymusic:latest
+            mrrikkert/pymusic:${{ env.GITHUB_SHA }}
