--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,17 +23,26 @@ jobs:
       with:
         python-version: "3.9"
         cache: "pip"
+    - name: Load cached Poetry installation
+      uses: actions/cache@v3
+      with:
+        path: ~/.local  # the path depends on the OS
+        key: poetry-0  # increment to reset cache
     - name: Install Poetry
-      run: |
-        export POETRY_HOME=/opt/poetry
-        python3 -m venv $POETRY_HOME
-        $POETRY_HOME/bin/pip install poetry==1.2.0
-        $POETRY_HOME/bin/poetry --version
+      uses: snok/install-poetry@v1
+      with:
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+        installer-parallel: true
+    - name: Load cached venv
+      id: cached-poetry-dependencies
+      uses: actions/cache@v3
+      with:
+        path: .venv
+        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
     - name: Install dependencies
-      run: |
-        export POETRY_HOME=/opt/poetry
-        $POETRY_HOME/bin/poetry config virtualenvs.create false
-        $POETRY_HOME/bin/poetry install --with dev
+      if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+      run: poetry install --with dev
     - name: Lint
       run: |
         flake8
