ignore venv directory

--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,13 @@ ignore=
     W503 # line break before binary operator
 max-line-length=100
 max-complexity=10
-exclude=cli/musicbeeipc/*
+exclude=
+    cli/musicbeeipc/*
+    .venv/*
 
 [pytest]
 junit_family=xunit2
+norecursedirs=.venv/*
 addopts = -p no:warnings
 # addopts = -n 4 -p no:warnings
 optional_tests=
@@ -16,3 +19,4 @@ optional_tests=
 
 [isort]
 profile = black
+skip_glob = .venv/*
