--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Test and lint code
 
 on:
   push:
@@ -14,7 +14,7 @@ env:
   MUSIC_PATH: Y:\\Music
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -61,25 +61,3 @@ jobs:
       if: github.ref == 'refs/heads/master'
       run: |
         poetry run pytest -m lastfm
-
-  docker:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master' && github.event.pull_request.merged == true
-    needs: "build"
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags:
-            mrrikkert/pymusic:latest
-            mrrikkert/pymusic:${{ env.GITHUB_SHA }}
